# test_packages

./: README.md
.github/: build_pack1.yaml
.github/workflows/: build_pack1.yaml  build_pack1.yml  build_pack2,yaml  build_pack2.yaml  test_build.yaml  test_workflow  test_workflow.yaml
package1/: pyproject.toml
package1/package1/: __init__.py  mod1.py
package1/tests/: test_package1.py
package2/: README.rst  pyproject.toml
package2/package2/: __init__.py  mod1.py  mod2.py
package2/tests/: test_package2.py
