[tool.poetry]
name = "package2"
version = "0.1.0"
description = ""
authors = ["p-powell <ppowell@dmtispatial.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
